@@ -1,0 +1,10 @@
+Processing module test_global (input/test_global.py)...
+
+Warnings...
+
+input/test_global.py:7: Global variable (x) not defined in module scope
+input/test_global.py:12: Global variable (x) not defined in module scope
+input/test_global.py:17: Global variable (x) not defined in module scope
+input/test_global.py:21: No global (xxx) found
+input/test_global.py:25: No global (xxx) found
+input/test_global.py:29: No global (xxx) found
